# optimization_showcase

./: docker-compose.yaml  makefile  openssl.cnf  prometheus.yaml
backend/graphql/: Cargo.toml  dockerfile
backend/graphql/certs/: local.key
backend/graphql/src/: main.rs
backend/grpc/: Cargo.toml  build.rs  dockerfile
backend/grpc/proto/: greeter.proto
backend/grpc/src/: greeter.rs  main.rs  server.rs
backend/http/: .env  Cargo.toml  build.rs  dockerfile  heaptrack.http.189254.zst
backend/http/.sqlx/: query-fa43ea4052cfe7db62560878c19807240410bb807d47e67f41fe4e08f8dd0b76.json
backend/http/certs/: local-rootCA.key  local-rootCA.pem  local-rootCA.srl  local.crt  local.csr
backend/http/logs/: app.log.2025-07-30  app.log.2025-08-01  app.log.2025-08-06  app.log.2025-08-08
backend/http/proto/: user.proto
backend/http/src/: main.rs  middleware.rs  tracing.rs
backend/http/src/api/: home.rs  mod.rs  websocket.rs
backend/http/src/config/: api.rs  certs.rs  db.rs  grpc.rs  mod.rs  redis.rs  router.rs
backend/http/src/controller/: home.rs  metrics.rs  mod.rs
backend/http/src/graphql/: mod.rs  queries.rs  subscriptions.rs
backend/http/src/model/: user.rs
backend/http/src/proto/: greeter.rs  mod.rs  server.rs  user.rs
backend/http/src/sql/: users.rs
backend/http1_1_api/: Cargo.toml  dockerfile
backend/http1_1_api/logs/: app.log.2025-07-20
backend/http1_1_api/src/config/: server_config.rs
backend/http1_1_api/src/utils/: certs.rs
backend/http1_api/: Cargo.toml
backend/http1_api/src/: main.rs
backend/http1_api/src/api/: common.rs  home.rs  mod.rs
backend/http1_api/src/config/: server_config.rs
backend/http1_api/src/utils/: certs.rs
backend/http1_api/tests/: cert_tests.rs
backend/http2_api/: Cargo.toml  dockerfile
backend/http2_api/certs/localhost/: cert.pem  key.pem
backend/http2_api/logs/: app.log.2025-07-16
backend/http2_api/src/: main.rs
backend/http2_api/src/api/: home.rs
backend/http2_api/src/api/v1/: home.rs
backend/http2_api/src/config/: server_config.rs
backend/http2_api/src/logging/: logging.rs
backend/http2_api/src/utils/: certs.rs
backend/http3_api/: Cargo.toml
backend/http3_api/src/: main.rs
backend/http_api/: Cargo.toml  dockerfile
backend/http_api/certs/: local.crt
backend/http_api/logs/: app.log.2025-07-21  app.log.2025-07-22
backend/http_api/src/api/: home.rs
backend/http_api/src/config/: server_config.rs
backend/http_api/src/utils/: certs.rs
backend/http_quic_api/: Cargo.toml  dockerfile
backend/http_quic_api/src/: common.rs  main.rs
backend/http_quic_api/tests/: is_request_handled.rs
backend/proto/: Cargo.toml
backend/proto/src/: main.rs  server.rs  store.rs
backend/soap/: calculator.cgi  makefile  ns.add.req.xml  ns.nsmap  ns.subtract.req.xml  ns.subtract.res.xml  server  soapC.cpp  soapServer.cpp  soapStub.h
backend/soap_consumer/: Cargo.toml  build.rs
backend/soap_consumer/cpp/: calculator.h  makefile  ns.add.res.xml  ns.wsdl  ns.xsd  server.cpp  soapClient.cpp  soapClientLib.cpp  soapH.h  soapServerLib.cpp
backend/soap_consumer/cpp/externs/: calculator.cpp
backend/soap_consumer/src/: main.rs
backend/web_transport/: Cargo.toml
backend/web_transport/src/: main.rs
dynamic/: tls.yaml
frontend/wasm/: Cargo.toml  Makefile
frontend/wasm/src/: lib.rs
frontend/wasm/src/renderer/: webgl.rs
frontend/wasm/src/shaders/: accretion.rs  mod.rs  raymarching.rs
frontend/wasm/src/utils/: canvas_utils.rs  mod.rs  webgl_utils.rs
frontend/web/: .env  Caddyfile  Dockerfile  Dockerfile.http1  Dockerfile.http2  Dockerfile.http3  Makefile  entrypoint.sh  http1-docker.nginx.conf  http2-docker.nginx.conf  nginx.conf  nginx.conf.template  package-lock.json  package.json  rsbuild.config.ts  stats.json  webpack.config.js
frontend/web/certs/: minica-key.pem  minica.pem
frontend/web/src/: App.tsx  index.html  index.tsx  output.css
frontend/web/src/classes/: Fetch.ts  WebTransporter.ts  gRPC.ts
frontend/web/src/components/: JSVideo.tsx  JuliaCanvasJs.tsx  JuliaCanvasWasm.tsx  WasmVideo.tsx
frontend/web/src/enums/: MethodTypes.ts
frontend/web/src/hooks/: graphql.tsx
frontend/web/src/interfaces/: IMethods.ts  IState.ts
frontend/web/src/pages/: GraphQL.tsx  Grpc.tsx  Home.tsx  Http1_1Fetch.tsx  Http2Fetch.tsx  Http3Fetch.tsx  JS.tsx  Wasm.tsx  WebSocketPage.tsx  grpcShowcase.tsx
frontend/web/src/shaders/: accretion.ts  raymarching.ts
frontend/web/src/utils/: canvas-utils.ts  data-fetcher.ts  webgl-renderer.ts  webgl-utils.ts
go_backend/: dockerfile  go.mod  go.sum  makefile
go_backend/certs/: cert.pem  key.pem
go_backend/cmd/api/: handlers.go  helper.go  main.go  routes.go
go_backend/cmd/graphql/: gqlgen.yml  server.go
go_backend/cmd/graphql/graph/: generated.go  resolver.go  (+2 more)
go_backend/cmd/grpc/: main.go
go_backend/cmd/mqtt/: main.go
go_backend/cmd/mqtt-client/: main.go
go_backend/cmd/mqtt-server/: main.go
go_backend/configs/: serverConfig.go
go_backend/internal/data/: models.go  users.go
soap/: .dockerignore  README.md  dockerfile  pom.xml
tests/: api_test.js
(+14 files in other folders)
