[package]
name = "grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
http = "1.3.1"
prost = "0.13.1"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tonic = { version = "0.13.1", features = ["gzip"] }
tonic-build = "0.13.1"
tonic-reflection = "0.13.1"
tonic-web = "0.13.1"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.13.1"
