[package]
name = "grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
http = "1.3.1"
prost = "0.13.1"
tokio = { version = "1.46.1", features = ["full", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tonic = { version = "0.13.1", features = ["_tls-any", "gzip", "server", "transport"] }
tonic-build = "0.13.1"
tonic-reflection = "0.13.1"
tonic-web = "0.13.1"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
rustls = { version = "0.23.10", features = ["ring"] }
rustls-pki-types = "1.5.0"

[build-dependencies]
tonic-build = "0.13.1"
