[package]
name = "http"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
axum-server = { version = "0.7.2", features = ["rustls", "tls-rustls"] }
deadpool-redis = "0.22.0"
futures = "0.3.31"
futures-util = "0.3.31"
juniper = "0.16.2"
juniper_axum = { version = "0.2.0", features = ["subscriptions"] }
juniper_graphql_ws = { version = "0.4.0", features = ["graphql-transport-ws", "graphql-ws"] }
lazy_static = "1.5.0"
prometheus = "0.14.0"
prost = "0.14.1"
rustls = "0.23.31"
rustls-pemfile = "2.2.0"
serde = "1.0.219"
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.47.0", features = ["full"] }
tokio-stream = "0.1.17"
tonic = { version = "0.14.0", features = ["_tls-any"] }
tonic-prost = "0.14.0"
tonic-prost-build = "0.14.0"
tonic-reflection = "0.14.0"
tonic-web = "0.14.0"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }

[build-dependencies]
tonic-prost-build = "0.14.0"
