[package]
name = "http2_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["http2"] }
axum-server = { version = "0.7.2", features = ["rustls", "tls-rustls"] }
rustls = "0.23.29"
rustls-pemfile = "2.2.0"
tokio = { version = "1.46.1", features = ["full"] }
