[package]
name = "http2_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["http2"] }
axum-server = { version = "0.7.2", features = ["rustls", "tls-rustls"] }
chrono = "0.4.41"
dotenv-vault = "0.1.2"
rustls = "0.23.29"
rustls-pemfile = "2.2.0"
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "chrono"] }
utoipa = { version = "5.4.0", features = ["macros"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
