[package]
name = "http_quic_api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
proto = "0.1.2"
quinn = "0.11.8"
rustls = { version = "0.23.29", features = ["ring"] }
rustls-pemfile = "2.2.0"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
