[package]
name = "rust_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "HtmlElement", "ImageData", "Node", "Performance", "WebGl2RenderingContext", "WebGlBuffer", "WebGlProgram", "WebGlRenderingContext", "WebGlShader", "WebGlUniformLocation", "WebGlVertexArrayObject", "Window", "console"] }
